Fix layout of checking-text component during loading
- Previously it broke the loading message into two lines.
  Now it's has 100% width and the text is on one line.
- This was broken in d2aa29639912fbce452070239f3b4eca2b9e17f8 when view
  encapsulation was disabled for this component and some CSS was not
  updated.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
@@ -1,4 +1,4 @@
-:host {
+app-checking-text {
   position: absolute;
   height: 100%;
   width: 100%;
